Fix alignment of icons

--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,8 @@ a {
 }
 
 .icon {
-  position: relative;
+  position:relative;
+  align-self: center;
   width: 8em;
   height: 8em;
 }
